bugfix z-index

--- a/src/css/componentes/modal-programa.scss
+++ b/src/css/componentes/modal-programa.scss
@@ -9,8 +9,6 @@
     height: 100%;
     width: 100%;
 
-    z-index: 5;
-
     &:focus {
         outline:0;
     }
